# minutes-creation-tool

./: .env.example  .gitignore  .python-version  LICENSE  README.md  get_api_keys.md  main.py  pyproject.toml  ruff.toml  setup.sh  test_tool.py
.devcontainer/: devcontainer.json
